docs: Codex 작업 기준으로 문서 정리